--- a/part_3/src/part_3/config/tasks.yaml
+++ b/part_3/src/part_3/config/tasks.yaml
@@ -77,37 +77,16 @@ formulate_campaign_budget:
 
 formulate_lineitem_budget:
   description: >
-    Formulate the budget for the line items for the campaign.
-    Use the Digital Advertising Budget for the concert to formulate the budget for the line items.
-    The budget amount for the concert should be based on the venue and geographic location.
+    
+    Use the {digital_advertising_budget} to formulate the budget for the lineitems. 
+    The sum of the lineitem budgets should equal the {digital_advertising_budget}.
     Express the budget in USD.
+    Follow these steps:
+    1. Use the venue budget calculator to calculate the budget for each venue, using the total bugdet and the seating capacity of the venue.
+    2. Write the result as a json object to the directory 'output' with the file name '{artist_name}_{year}_lineitems_budget.json' .
+  expected_output: >
+    A JSON object with the budget for the lineitems.
 
-    Here's a structured approach to help you get started:
-
-    1. **Estimate Revenue Goals**
-      - **Determine Ticket Sales Revenue**: Estimate the total revenue from ticket sales. For example, if each concert has 20,000 tickets at an average price of $150, the revenue per concert would be $3,000,000.
-      - **Total Concerts**: Multiply by the number of concerts. If there are 50 concerts, the total revenue would be $150,000,000.
-
-    2. **Allocate Advertising Budget**
-      - **Percentage of Revenue**: A common rule of thumb is to allocate 15%-20% of the total potential gross revenue to advertising². For Taylor Swift's concerts, this would be:
-        - **15% of $150,000,000**: $22,500,000
-        - **20% of $150,000,000**: $30,000,000
-
-    3. **Break Down the Budget**
-      - **Digital Advertising**: Allocate a significant portion to digital platforms (e.g., social media, search engines, streaming services). This could be around 60%-70% of the total advertising budget.
-        - **Example**: If the total budget is $25,000,000, then $15,000,000 to $17,500,000 could be for digital advertising.
-      - **Traditional Media**: Allocate the remaining budget to traditional media (e.g., TV, radio, print).
-        - **Example**: $7,500,000 to $10,000,000 for traditional media.
-
-    4. **Digital Advertising Strategy**
-      - **Social Media Ads**: Platforms like Instagram, Facebook, TikTok, and Twitter are crucial for reaching {artist_name} fanbase.
-      - **Retail Media**: Utilize retail media platforms to reach audiences while they shop online.
-
-    Example Calculation
-    If the goal is to generate $45,000,000 in ticket sales from digital advertising:
-      - **Ticket Price**: $150
-      - **Tickets Sold**: 300,000 tickets
-      - **Orders Needed**: 111,111 orders (
 
 create_campaign:
   description: >
@@ -117,14 +96,14 @@ create_campaign:
      
      The start date of the campaign should be 60 days before the first concert.
      The end date of the campaign should be the date of the last concert.
-     The budget is the Digital Advertising Budget.
+     The budget is the {digital_advertising_budget}.
      Include the campaign name, the campaign start date, the campaign end date, the campaign budget, the campaign demographics, the campaign venues, and the campaign media.
     Formulate the campaign structure to match the following example.
     Example campaign input data:
             "name": "{artist_name} Concert Tour {year}",
             "startDate": "2025-01-01",
             "endDate": "2025-12-31",
-            "budget": 1280000,
+            "budget": {digital_advertising_budget},
             "monthlyPacing": 500,
             "dailyBudget": 10,
             "isAutoDailyPacing": false,
