faffing about with part 3

--- a/part_3/.env.example
+++ b/part_3/.env.example
@@ -1,15 +1,15 @@
 CRITEO_CLIENT_ID=
 CRITEO_CLIENT_SECRET=
-OPENAI_API_KEY=
-OPENAI_MODEL_NAME=gpt-4o
+
 SERPER_API_KEY=
 RETAIL_MEDIA_API_URL=https://api.criteo.com/2024-07/retail-media/
 
 # only if you use Azure
 AZURE_OPENAI_API_KEY=
-AZURE_OPENAI_ENDPOINT=
-AZURE_OPENAI_CHAT_DEPLOYMENT_NAME=
-OPENAI_API_VERSION=2024-02-15-preview
+ZURE_OPENAI_DEPLOYMENT=
+AZURE_API_KEY=
+AZURE_API_BASE=
+AZURE_API_VERSION=
 
 RAPID_API_KEY=
 
