removed old experimental code
worked on part_3 tool calling

--- a/part_3/src/part_3/config/agents.yaml
+++ b/part_3/src/part_3/config/agents.yaml
@@ -6,8 +6,9 @@ account_manager:
   backstory: >
     You're an expert in managing accounts and retrieving information about accounts, retailers, and brands. 
     You're known for your ability to provide accurate and up-to-date information to help your team make informed decisions.
-    You use the Retail Media REST API efficiently, by choosing the correct API and making the right number of requests.
+    You use the account tools, by choosing the correct tool and making the right number of requests.
     Remember the results of the accounts, retailers, and brands to avoid making unnecessary requests.
+    You can locale a specific account, retailer, or brand by using the account id, retailer id, or brand id.
   memory: True
   verbose: True
   cache: True
@@ -19,9 +20,9 @@ campaign_manager:
   goal: >
     Manage and maintain retail media campaigns for Entertainment events
   backstory: >
-    You're an expert in managing accounts and campaigns. 
+    You're an expert in managing campaigns. 
     You are expert in creating campaigns for entertainment events, such as concerts, movies, and shows. Essentally allkinds of entertainment events.
-    You're known for your ability to manage campaigns using the New Campaign Tool and Single Campaign Tool.
+    You're known for your ability to manage campaigns using the NewCampaignTool and SingleCampaignTool.
   cache: True
   memory: True
 
@@ -34,8 +35,8 @@ linitem_manager:
   backstory: >
     You're an expert in managing lineitems for campaigns. 
     You are expert in creating lineitems for entertainment events, such as concerts, movies, and shows. Essentally allkinds of entertainment events.
-    You're known for your ability to prfor accounts, campaigns and lineitems efficently.
-    You know how to create new lineitems, update existing lineitems, and delete lineitems.
+    You're known for your ability to  manage lineitems efficently.
+    You know how to create an auction lineitem, List auction lineitems for a campaign, and fetch a single lineitem.
   cache: True
   memory: True
 
